# versionator

./: .dockerignore  .gitignore  .mcp.json.ctxloom.bak  .versionator.yaml  CLAUDE.md  CLAUDE.project.md  CLAUDE.todo.md  Containerfile  Dockerfile  LEFTHOOK.md  LICENSE  README.md  get-versionator-windows.bat  get-versionator.sh  go.mod  go.sum  justfile  lefthook.yml  main.go  railroad
.claude/: settings.json
.ctxloom/: lock.yaml  remotes.yaml
.devcontainer/: Dockerfile  devcontainer.json
.gemini/: settings.json
.junie/: guidelines.md
.scm/: config.yaml  context.md  lock.yaml  remotes.yaml
cmd/: .versionator.yaml  bump.go  bump_test.go  ci.go  ci_test.go  commit.go  commit_test.go  completion.go  completion_test.go  config.go  config_test.go  custom.go  custom_test.go  emit.go  emit_build.go  emit_file.go  emit_patch.go  emit_test.go  init.go  init_test.go  major.go  major_test.go  messages.go  metadata.go  metadata_test.go  minor.go  minor_test.go  mode.go  output.go  patch.go  patch_test.go  plugin.go  prefix.go  prefix_test.go  prerelease.go  prerelease_test.go  release.go  release_test.go  revision.go  root.go  (+17 more)
cmd/output/: build.go  (+5 more)
docs/: GITVERSION_FEATURE_PARITY_PLAN.md  HOMEBREW_TAP_SETUP.md  VERSION_TEMPLATES.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
examples/python/: .gitignore  Containerfile  Makefile  README.md  justfile  justfile.container  pyproject.toml
examples/python/mypackage/: __init__.py  _version.tmpl.py  main.py
integration_test/: run_integration_test.sh
resources/: semver-2.md  semver-suffixes.md
(+604 files in other folders)
